--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 services:
   goodline_ip:
     image: 'docker.sadovskiy.net/goodline_iptv:latest'
-    restart: always
+    restart: "no"
     environment:
       LOG_LEVEL: 3
     volumes:
